--- a/styles/prosilver/template/event/navbar_header_quick_links_after.html
+++ b/styles/prosilver/template/event/navbar_header_quick_links_after.html
@@ -1,1 +1,1 @@
-<li class="small-icon icon-pages"><a href="{U_NOTES}" role="menuitem">{L_NOTES}</a></li>
+<li class="small-icon icon-pages"><a href="{U_SENKY_NOTES}" role="menuitem">{L_NOTES}</a></li>
