--- a/styles/prosilver/template/notes.html
+++ b/styles/prosilver/template/notes.html
@@ -6,7 +6,7 @@
 	<div class="inner">
 		<div class="content">
 
-			<form method="post" action="{U_NOTES}">
+			<form method="post" action="{U_SENKY_NOTES}">
 				<p>{L_NOTES_DESCRIPTION}</p>
 				<h3>{L_NOTES}</h3>
 				<p>
